# movie-agent-service

./: .env.example  .gitignore  ARCHITECTURE.md  CONFIGURATION.md  CONTINUATION.md  DEPLOYMENT.md  DEPLOY_STEPS.md  DESIGN_DECISIONS.md  Dockerfile  HARDWARE_AWARENESS.md  HUGGINGFACE_DEPLOYMENT.md  LICENSE  QUICK_DEPLOY.sh  README.md  SIMPLE_DEPLOY.md  STEP_A_SUMMARY.md  app.py  pyproject.toml  requirements.txt  test_poster_analysis.py
demo/: cli_demo.py  read_logs.py  view_logs.py
evaluation/: cases.py  dummy_llm.py  dummy_tools.py  eval_service.py  metrics.py  run.py  run_real.py  runner.py
scripts/: README.md  deploy_to_hf.sh  push_with_version.sh
spaces/: .gitignore  README.md  app.py  requirements.txt
src/: __init__.py
src/movie_agent/: app.py  canonicalizer.py  chunking.py  config.py  config_loader.py  config_validator.py  data_loader.py  exceptions.py  llm_factory.py  models.py  quiz_controller.py  retriever_factory.py  schemas.py  service.py  vector_store.py  vision_factory.py
src/movie_agent/agent/: callbacks.py  output_formatter.py  output_parser.py  prompts.py  react_agent.py  tool_calling_agent.py
src/movie_agent/context/: __init__.py  context_manager.py  session_context.py
src/movie_agent/intent/: __init__.py  agent_intent.py  quiz_type_detector.py
src/movie_agent/interaction/: __init__.py  intent_router.py  intent_types.py
src/movie_agent/memory/: README.md  __init__.py  agent_memory.py  conversation_memory.py  memory_manager.py  quiz_state.py  session_memory_manager.py  session_state.py
src/movie_agent/orchestration/: __init__.py  chat_orchestrator.py  poster_orchestration.py  poster_orchestrator.py  query_relevance_detector.py
src/movie_agent/resolution/: __init__.py  entity_extractor.py  exact_matcher.py  fuzzy_matcher.py  movie_title_resolver.py  resolution_metadata.py  resolution_policy.py  resolver_factory.py  semantic_resolver.py  vocabulary_builder.py
src/movie_agent/security/: __init__.py  exceptions.py  file_validator.py  (+3 more)
static/: script.js  style.css
templates/: about.html  index.html  setup.html
tests/: __init__.py  test_agent_behavior.py  test_agent_service.py  test_callbacks.py  test_canonicalizer.py  test_chunking.py  test_data_loader.py  test_entity_extraction.py  test_failure_modes.py  test_integration.py  test_intent_router.py  test_models.py  test_movie_statistics.py  test_poster_analysis.py  test_resolution.py  test_security.py  test_tools.py  test_vector_store.py
(+15 files in other folders)
